post venta algo

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -417,6 +417,18 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 }
 /**************************** FIN PLANES **********************************************************************/
 
+/**************************** POSTVENTA **********************************************************************/
+
+.post_venta_titulo{
+    background-color: darkred;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    color: white;
+    font-size: 50px;
+}
+
+/**************************** FIN POSTVENTA **********************************************************************/
+
 
 
 
