cambios antes de pasar a yii advance
quedo el login a medias sin funcionar

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -19,7 +19,9 @@ body{
     z-index: 0;
     position: relative;
 }
-
+.col-md-12{
+    z-index: -1;
+}
 /*PARA QUE FUNCIONE LA BARRA */
 .affix {
     top: 0;
@@ -33,11 +35,21 @@ body{
 .container-fluid, .logos{
     padding: 0px !important;
 }
-
+/* LINKS SIN CAMBIOS AL HACER CLICK Y SIN SUBRAYADOS O CAMBIOS DE COLOR*/
 a{
     text-decoration: none !important;
     color: inherit !important;
 }
+
+/**************** BOTON BACK TO TOP */
+.back-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+/**************** FIN BOTON BACK TO TOP */
 
 .logos{
     display: block;
@@ -82,9 +94,6 @@ a{
     float: left;
 }
 
-.sf-menu li { padding: 0px; }
-.sf-menu li a {  }
-
 .sf-menu ul {
     position: absolute;
     display: none;
@@ -93,6 +102,7 @@ a{
     z-index: 99;
 }
 .sf-menu li {
+    padding: 0px;
     position: relative;
     float: left;
     background: white;
@@ -101,7 +111,7 @@ a{
     -o-transition:background 1s;
     transition:background 1s;
     border: 1px solid rgba(0, 0, 0, 0.38);
-    width: 12.50%;
+    width: 11.1%;
     text-align: center;
     border-left: none;
     height: 45px;
@@ -143,16 +153,13 @@ a{
 }
 .bx-wrapper {
     border: 0px solid #fff !important;
+    z-index: -1;
 }
 /*******************************FIN PRIMER SLIDER*/
 
 /*******************************NUESTROS MODELOS*/
 
-.container-fluid h4{
-    text-align: center;
-    color: darkred;
-    font-size: 30px !important;
-}
+
 /*******************************FIN NUESTROS MODELOS*/
 
 /*******************************CONTACTO*/
@@ -225,6 +232,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 .wrap_postventa,  .wrap_planes{
     border: solid 1px #e0e0e0 ;
 }
+
 .planes_postventa h3{
     position: absolute;
     margin-left: 5%;
@@ -288,7 +296,9 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 /******************************* FOOTER*/
 .footer{
     margin-top: 72px !important;
-
+}
+.footer .col-md-12{
+    z-index: -1;
 }
 .redes h4{
     margin-left: 5%;
@@ -314,17 +324,13 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     margin: 0px 10%;
 }
 
-.nuestros_modelos h2{
-    color: darkred;
-    text-align: center;
-}
-.nuestros_modelos .col-md-3{
+.nuestros_modelos .col-md-3, .nuestros_modelos .col-md-4{
     padding-left: 0px !important;
     padding-right: 4px !important;
     margin-bottom: 40px;
     text-align: center;
 }
-.nuestros_modelos .col-md-3 img{
+.nuestros_modelos .col-md-3 img, .nuestros_modelos .col-md-4 img{
     width: 100%;
     margin-bottom: 30px;
 }
@@ -373,11 +379,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 
 
 /****************************  PAGINA NOSOTROS **********************************************************************/
-.nuestra_empresa h2{
-    text-align: center;
-    color: darkred;
-    margin-bottom:  20px;
-}
+
 .nuestra_empresa .thumbs_bx a img{
     width: 32%;
 }
@@ -419,25 +421,92 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 
 /**************************** POSTVENTA **********************************************************************/
 
-.post_venta_titulo{
-    background-color: darkred;
-    padding-top: 25px;
-    padding-bottom: 25px;
+.titulo_seccion{
+    background-color: #9b102d;
+    padding-top: 46px;
+    padding-bottom: 13px;
     color: white;
     font-size: 50px;
+    font-family: semibold !important;
+    margin-bottom: 50px;
 }
-
+.img_alertas a img{
+    display: block;
+    margin: auto;
+    height: 110px;
+    margin-top: 50px;
+}
+.solicitar_turnos{
+    font-weight: bold;
+    font-size: large;
+    line-height: 1.5
+}
 /**************************** FIN POSTVENTA **********************************************************************/
 
+/**************************** PAGINA NUESTROS USADOS **********************************************************************/
+.nuestros_usados{
+    margin: 0px 5%;
+}
 
+.nuestros_usados .col-md-4{
+    padding-left: 0px !important;
+    padding-right: 4px !important;
+    margin-bottom: 40px;
+}
+.nuestros_usados .col-md-4 img{
+    width: 100%;
+    margin-bottom: 30px;
+}
+.descripcion_usado{
+    font-size: larger;
+}
 
+/**************************** FIN PAGINA NUESTROS USADOS **********************************************************************/
 
+/**************************** PAGINA CONTACTO **********************************************************************/
+.form_contacto_contact_page .col-md-12{
+    margin-bottom: 50px;
+}
 
+.imagen_contacto img{
+    max-height: 400px;
+}
+.imagen_contacto{
+    margin-top: 14px;
+}
+.sucursales_contacto{
+    text-align: center;
+}
+.sucursales_contacto h4{
+margin-top: 30px;
+}
+.wrap_como_llegar{
+    margin-top: 30px;
+    text-align: center;
+}
+.boton_como_llegar{
+    width: 150px;
+    margin-top: 2%;
+    border-radius: 0px !important;
+    background-color:  darkred !important;
+    color: white !important;
+    border: none !important;
+}
+.telefono{
+    color: #9b102d;
+}
+/**************************** FIN PAGINA CONTACTO **********************************************************************/
+/**************************** NOVEDADES **********************************************************************/
+.wrap_novedades{
+    margin-bottom: 50px;
+}
+.wrap_novedades .titulo_novedad{
+    color: #9b102d;
+    font-size: x-large;
+    font-family: bold;
+}
 
-
-
-
-
+/**************************** FIN NOVEDADES **********************************************************************/
 
 
 
