--- a/web/css/main.css
+++ b/web/css/main.css
@@ -173,7 +173,7 @@ a{
 }
 .contact h1, .contact h2, .contact h3, .contact h4, .contact h5, .contact h6{
     margin: 0px !important;
-    color: darkred;
+    color: #9b102d;
 }
 .contact .form-group input{
     border-radius: 0px !important;
@@ -205,7 +205,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     float: right;
     margin-top: 2%;
     border-radius: 0px !important;
-    color: darkred;
+    color: #9b102d;
     margin-bottom: 5% !important;
     background-color:  darkred !important;
     color: white;
@@ -236,20 +236,20 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 .planes_postventa h3{
     position: absolute;
     margin-left: 5%;
-    color: darkred;
+    color: #9b102d;
 }
 .planes_postventa button{
     position: absolute;
     margin-left: 5%;
     margin-top: 50%;
     color: white;
-    background-color: darkred;
+    background-color: #9b102d;
     border-radius: 0% !important;
     border: solid 0px black ;
 }
 .planes_postventa button:hover{
     color: white;
-    background-color: darkred;
+    background-color: #9b102d;
     border-radius: 0% !important;
     border: solid 0px black ;
 }
@@ -280,11 +280,12 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     display: block;
     text-align: center;
     font-size: 28px;
-    border: solid 1px darkred;
+    border: solid 1px #9b102d;
     width: 50%;
     height: 55px;
     line-height: 55px;
     color: lightgrey;
+    cursor: pointer;
 }
 .linia_divisora_footer{
     border-top: solid 1px black;
@@ -304,7 +305,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     margin-left: 5%;
 }
 .redes h4, .sucursales h5, .sucursales h4{
-    color: darkred;
+    color: #9b102d;
 }
 .redes img{
     margin-left: 15px;
@@ -339,7 +340,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 
 /**************************** PAGINA MODELOS DETALLE **********************************************************************/
 .mod_detalles h2{
-    color: darkred;
+    color: #9b102d;
     font-family: semibold !important;
     font-size: 46px;
     margin-top: 79px;
@@ -354,7 +355,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 .nav_detalle{
     margin-top: 35px;
     width: 100%;
-    background-color: darkred;
+    background-color: #9b102d;
     color: white;
     margin-bottom: 20px !important;
 }
@@ -395,7 +396,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 /**************************** PLANES **********************************************************************/
 .planes h1{
     text-align: center;
-    color: darkred;
+    color: #9b102d;
     margin-top: 50px;
 }
 .planes div{
@@ -507,6 +508,12 @@ margin-top: 30px;
 }
 
 /**************************** FIN NOVEDADES **********************************************************************/
+
+/**************************** BACKEND **********************************************************************/
+.container p a{
+    color: white !important;
+}
+/**************************** FIN BACKEND **********************************************************************/
 
 
 
