--- a/web/css/main.css
+++ b/web/css/main.css
@@ -47,8 +47,20 @@ a{
     position: fixed;
     bottom: 20px;
     right: 20px;
-}
+    font-size: 23px;
+    padding: 6px 10px;
+    font-weight: 100;
+    border-radius: 0px !important;
+    color: white !important;
+    background-color: #9b102d !important;
+    border-color: #9b102d !important;
 
+}
+.back-to-top:hover{
+    color: black !important;
+    background-color: white !important;
+    border-color: white !important;
+}
 /**************** FIN BOTON BACK TO TOP */
 
 .logos{
@@ -73,13 +85,25 @@ a{
     padding: 0px !important;
 }
 
-.img_home{
+.img_home {
     z-index: -1;
     position: relative;
     width: 100%;
     height: 500px;
     max-height: 407px;
 }
+.triangulo_home:after{
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 1100px 350px 0 0;
+    border-color: #ffffff transparent transparent transparent;
+    content: '';
+    position: absolute;
+    left: 16px;
+    top: 1px;
+}
+
 
 /***************************CSS DEL NAV BAR*/
 
@@ -143,8 +167,37 @@ a{
 .form_buscar div{
     padding: 7px;
 }
+/* ajuste para que se colapse y se vea bien*/
+.collapse{
+    padding: 0px !important;
+}
 
+.navbar-toggle {
+    background-color: black !important;
+    float: left !important;
+}
+.navbar-toggle .icon-bar {
+    background-color: white !important;
+}
+@media (max-width: 1050px) {
+    .sf-menu li a{
+        font-size: small;
+    }
+}
+@media (max-width: 720px) {
+    .sf-menu, .sf-menu * {
+        list-style: circle !important;
+    }
+    .sf-menu li {
+        float: none !important;
+    }
+}
 
+@media (max-width: 480px) {
+    .img_logo_piazza, .img_logo_fiat{
+        float: left !important;
+    }
+}
 /*******************************FIN CSS DEL NAV BAR*/
 
 /*******************************PRIMER SLIDER*/
@@ -162,7 +215,7 @@ a{
 
 /*******************************FIN NUESTROS MODELOS*/
 
-/*******************************CONTACTO*/
+/******************************* INDEX CONTACTO*/
 .form-group{
     margin-bottom: 0px !important;
     line-height: 1;
@@ -226,34 +279,58 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     float: right !important;
     text-align: center;
 }
-/*******************************FIN CONTACTO*/
+/*******************************FIN INDEX CONTACTO*/
 
-/******************************* planes postventa*/
+/******************************* INDEX planes postventa*/
 .wrap_postventa,  .wrap_planes{
     border: solid 1px #e0e0e0 ;
 }
 
-.planes_postventa h3{
+.planes_postventa h1{
     position: absolute;
     margin-left: 5%;
     color: #9b102d;
+    z-index: 1;
+    font-family: semibold;
+    width: 40%;
+    margin-top: 35px;
 }
+
 .planes_postventa button{
+    z-index: 1;
     position: absolute;
-    margin-left: 5%;
-    margin-top: 50%;
     color: white;
+    top: 70%;
+    left: 7%;
     background-color: #9b102d;
     border-radius: 0% !important;
     border: solid 0px black ;
+    font-size: 22px;
+    padding: 1px 25px;
 }
+
 .planes_postventa button:hover{
     color: white;
     background-color: #9b102d;
     border-radius: 0% !important;
     border: solid 0px black ;
 }
-/******************************* FIN planes postventa*/
+.planes_postventa button span{
+    display: block;
+    margin-bottom: -4px;
+}
+.planes_postventa button span:first-of-type {
+    margin-bottom: -5px;
+}
+
+.img_home_postventa, .img_home_planes {
+    z-index: -1;
+    position: relative;
+    width: 100%;
+    height: 500px;
+    max-height: 407px;
+}
+/******************************* FIN INDEX planes postventa*/
 
 /******************************* NOVEDADES*/
 .novedades {
@@ -275,18 +352,36 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 /******************************* FIN NOVEDADES*/
 
 /******************************* NEWSLETTER*/
-.boton_newsleter{
-    margin: auto;
-    display: block;
-    text-align: center;
-    font-size: 28px;
-    border: solid 1px #9b102d;
-    width: 50%;
-    height: 55px;
-    line-height: 55px;
-    color: lightgrey;
-    cursor: pointer;
+@media (min-width: 480px) {
+    .boton_newsleter {
+        font-size: 20px;
+        width: 500px;
+        margin: auto;
+        display: block;
+        text-align: center;
+        border: solid 1px #9b102d;
+        height: 55px;
+        line-height: 55px;
+        color: lightgrey;
+        cursor: pointer;
+    }
 }
+@media (min-width: 1024px) {
+    .boton_newsleter{
+        width: 50%;
+        font-size: 25px;
+        margin: auto;
+        display: block;
+        text-align: center;
+        border: solid 1px #9b102d;
+        height: 55px;
+        line-height: 55px;
+        color: lightgrey;
+        cursor: pointer;
+    }
+}
+
+
 .linia_divisora_footer{
     border-top: solid 1px black;
     margin-top: 40px;
@@ -371,7 +466,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 .nav_detalle li a span{
     margin-left: 15px;
 }
-.nav>li>a:focus, .nav>li>a:hover {
+.nav_detalle>li>a:focus, .nav_detalle>li>a:hover {
     text-decoration: none !important;
     background-color: darkred !important;
     border: 1px solid darkred !important;
@@ -479,7 +574,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     text-align: center;
 }
 .sucursales_contacto h4{
-margin-top: 30px;
+    margin-top: 30px;
 }
 .wrap_como_llegar{
     margin-top: 30px;
@@ -514,6 +609,5 @@ margin-top: 30px;
     color: white !important;
 }
 /**************************** FIN BACKEND **********************************************************************/
-
 
 
