--- a/web/css/main.css
+++ b/web/css/main.css
@@ -13,7 +13,6 @@
 
 body{
     font-family: regular !important;
-    overflow: hidden;
 }
 html, body {
     margin:0 !important; /* remove default margin */
@@ -21,6 +20,12 @@ html, body {
     width:100% !important; /* take full browser width */
     height:100% !important; /* take full browser height*/
 }
+.big-container-fluid{
+    z-index: 0;
+    margin-top: 0px;
+    position: relative;
+}
+
 .wrap{
     z-index: 0;
     position: relative;
@@ -65,8 +70,8 @@ a{
     font-weight: 100;
     border-radius: 0px !important;
     color: white !important;
-    background-color: #9b102d !important;
-    border-color: #9b102d !important;
+    background-color: #96172E !important;
+    border-color: #96172E !important;
     z-index: 99;
 }
 .back-to-top:hover{
@@ -101,7 +106,7 @@ a{
     padding: 0px !important;
 }
 
-.img_home {
+/*.img_home {
     z-index: -1;
     position: relative;
     width: 100%;
@@ -118,7 +123,7 @@ a{
     position: absolute;
     left: 16px;
     top: 1px;
-}
+}*/
 
 
 /***************************CSS DEL NAV BAR*/
@@ -153,7 +158,6 @@ a{
     border: 1px solid rgba(0, 0, 0, 0.38);
     width: 11.1%;
     text-align: center;
-    border-left: none;
     height: 45px;
     color: black;
 }
@@ -169,15 +173,23 @@ a{
     height: 100%;
     font-size: 16px;
 }
-.form_buscar div input{
+#modelos-nombre{
     height: 30px;
 }
-.form_buscar div{
+.field-modelos-nombre{
     padding: 7px;
+}
+.sf-menu .control-label{
+    display: none !important;
 }
 /* ajuste para que se colapse y se vea bien*/
 .collapse{
     padding: 0px !important;
+    z-index: 99;
+}
+
+.navbar-header{
+    padding-left: 46%;
 }
 
 .navbar-toggle {
@@ -190,35 +202,77 @@ a{
 
 @media (max-width: 992px) {
     .sf-menu li a{
-        font-size: small;
+        font-size: small !important;
     }
-    .img_fiat_plan,.img_home{
-        display: none;
+    .img_fiat_plan, .img_home{
+        display: none !important;
     }
+    .img_post_detalle{
+        display: none !important;
+    }
+    .imagen_contacto .img_home{
+        width: auto !important;
+    }
+    .img_contacto_detalle{
+        display: none !important;
+    }
+    .contact{
+        margin-bottom: 60px;
+    }
+    .img_home_postventa, .img_home_planes {
+        height: auto !important;
+        max-height: none !important;
+    }
+    .wrap_planes, .wrap_postventa{
+        margin-bottom: 30px;
+
+    }
+
 }
+
 @media (max-width: 768px) {
     .sf-menu, .sf-menu * {
         list-style: circle !important;
     }
+    .sf-menu{
+        width: 70%;
+        margin-left: 14% !important;
+    }
     .sf-menu li {
         float: none !important;
-        width: 300px !important;
+        width: 100% !important;
+    }
+    .collapse {
+        padding-left: 15px !important;
+        padding-right: 15px !important;
     }
     .img_fiat_plan,.img_home{
         display: none !important;
+        max-height: none !important;
     }
+
     .novedades h3 {
         top: 45%;
         color: white;
         font-size: 40px !important;
     }
+    .imagen_contacto .img_home{
+        width: auto;
+    }
+    .wrap_planes h1, .wrap_postventa h1{
+        font-size: 30px !important;
+    }
+    .wrap_postventa a button, .wrap_planes a button{
+        font-size: 18px !important;
+    }
 }
-@media (max-width: 600px) {
 
-}
 @media (max-width: 480px) {
     .img_logo_piazza, .img_logo_fiat{
         float: left !important;
+    }
+    .wrap_postventa a button, .wrap_planes a button{
+
     }
 }
 /*******************************FIN CSS DEL NAV BAR*/
@@ -242,9 +296,10 @@ a{
     margin: auto;
     display: block;
     text-align: center;
-    color: #9b102d;
+    color: #96172E;
     font-family: semibold;
     margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 /*******************************FIN NUESTROS MODELOS INDEX*/
@@ -260,7 +315,7 @@ a{
 }
 .contact h1, .contact h2, .contact h3, .contact h4, .contact h5, .contact h6{
     margin: 0px !important;
-    /*color: #9b102d;*/
+    /*color: #96172E;*/
 }
 .contact .form-group input{
     border-radius: 0px !important;
@@ -292,9 +347,9 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     float: right;
     margin-top: 2%;
     border-radius: 0px !important;
-    color: #9b102d;
+    color: #96172E;
     margin-bottom: 5% !important;
-    background-color:  darkred !important;
+    background-color:  #96172E !important;
     color: white;
     border: none !important;
 }
@@ -323,7 +378,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 .planes_postventa h1{
     position: absolute;
     margin-left: 5%;
-    color: #9b102d;
+    color: #96172E;
     z-index: 1;
     font-family: semibold;
     width: 40%;
@@ -336,7 +391,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     color: white;
     top: 70%;
     left: 7%;
-    background-color: #9b102d;
+    background-color: #96172E;
     border-radius: 0% !important;
     border: solid 0px black ;
     font-size: 22px;
@@ -345,7 +400,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 
 .planes_postventa button:hover{
     color: white;
-    background-color: #9b102d;
+    background-color: #96172E;
     border-radius: 0% !important;
     border: solid 0px black ;
 }
@@ -366,15 +421,16 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 }
 /******************************* FIN INDEX planes postventa*/
 
-/******************************* NOVEDADES*/
+/******************************* NOVEDADES INDEX*/
 .novedades {
-    background-image: url("/images/autos/6_2.jpg");
+    /*background-image: url("/images/index/novedades.jpg");
+    height: auto;
     max-width: 100%;
-    height: 500px;
-    background-repeat: repeat-x;
+    background-repeat: repeat-x;*/
     margin: 5% 0%;
-    margin-bottom: 3%;
-    background-size: 100%;
+    padding-left: 0px !important;
+    padding-right:  0px !important;
+    /*background-size: 100%;*/
 }
 .novedades h3{
     position: absolute;
@@ -383,7 +439,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     color: white;
     font-size: 60px;
 }
-/******************************* FIN NOVEDADES*/
+/******************************* FIN NOVEDADES INDEX*/
 
 /******************************* NEWSLETTER*/
 @media (min-width: 480px) {
@@ -393,7 +449,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
         margin: auto;
         display: block;
         text-align: center;
-        border: solid 1px #9b102d;
+        border: solid 1px #96172E;
         height: 55px;
         line-height: 55px;
         color: lightgrey;
@@ -407,7 +463,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
         margin: auto;
         display: block;
         text-align: center;
-        border: solid 1px #9b102d;
+        border: solid 1px #96172E;
         height: 55px;
         line-height: 55px;
         color: lightgrey;
@@ -434,7 +490,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     margin-left: 5%;
 }
 .redes h4, .sucursales h5, .sucursales h4{
-    color: #9b102d;
+    color: #96172E;
 }
 .redes img{
     margin-left: 15px;
@@ -451,16 +507,17 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 
 /**************************** PAGINA NUESTROS MODELOS **********************************************************************/
 .nuestros_modelos{
-    margin: 0px 10%;
+    margin: 0px 5%;
 }
 
-.nuestros_modelos .col-md-3, .nuestros_modelos .col-md-4{
+.wrap_modelos{
     padding-left: 0px !important;
     padding-right: 4px !important;
     margin-bottom: 40px;
     text-align: center;
+    min-height: 270px !important;
 }
-.nuestros_modelos .col-md-3 img, .nuestros_modelos .col-md-4 img{
+.wrap_modelos img{
     width: 100%;
     margin-bottom: 30px;
 }
@@ -469,7 +526,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 
 /**************************** PAGINA MODELOS DETALLE **********************************************************************/
 .mod_detalles h2{
-    color: #9b102d;
+    color: #96172E;
     font-family: semibold !important;
     font-size: 46px;
     margin-top: 79px;
@@ -484,15 +541,15 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 .nav_detalle{
     margin-top: 35px;
     width: 100%;
-    background-color: #9b102d;
+    background-color: #96172E;
     color: white;
     margin-bottom: 20px !important;
 }
 .nav_detalle .active a{
     text-decoration: none !important;
-    background-color: darkred !important;
-    background: darkred !important;
-    border: 1px solid darkred !important;
+    background-color: #96172E !important;
+    background: #96172E !important;
+    border: 1px solid #96172E !important;
 }
 .nav_detalle li{
     margin-bottom: 0px !important;
@@ -502,8 +559,8 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 }
 .nav_detalle>li>a:focus, .nav_detalle>li>a:hover {
     text-decoration: none !important;
-    background-color: darkred !important;
-    border: 1px solid darkred !important;
+    background-color: #96172E !important;
+    border: 1px solid #96172E !important;
 }
 /**************************** FIN MODELOS DETALLE **********************************************************************/
 
@@ -517,7 +574,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 /**************************** PLANES **********************************************************************/
 .planes h1{
     text-align: center;
-    color: #9b102d;
+    color: #96172E;
     margin-top: 50px;
 }
 .planes div{
@@ -552,7 +609,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 /**************************** POSTVENTA **********************************************************************/
 
 .titulo_seccion{
-    background-color: #9b102d;
+    background-color: #96172E;
     padding-top: 46px;
     padding-bottom: 13px;
     color: white;
@@ -571,6 +628,7 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     font-size: large;
     line-height: 1.5
 }
+
 /**************************** FIN POSTVENTA **********************************************************************/
 
 /**************************** PAGINA NUESTROS USADOS **********************************************************************/
@@ -578,12 +636,13 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     margin: 0px 5%;
 }
 
-.nuestros_usados .col-md-4{
+.wrap_usados{
     padding-left: 0px !important;
     padding-right: 4px !important;
     margin-bottom: 40px;
+    min-height: 480px !important;
 }
-.nuestros_usados .col-md-4 img{
+.wrap_usados img{
     width: 100%;
     margin-bottom: 30px;
 }
@@ -594,12 +653,15 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
 /**************************** FIN PAGINA NUESTROS USADOS **********************************************************************/
 
 /**************************** PAGINA CONTACTO **********************************************************************/
+.wrap_pagina_contacto{
+    margin: 0% 5%;
+}
 .form_contacto_contact_page .col-md-12{
     margin-bottom: 50px;
 }
 
 .imagen_contacto img{
-    max-height: 400px;
+    /*max-height: 400px;*/
 }
 .imagen_contacto{
     margin-top: 14px;
@@ -618,24 +680,63 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     width: 150px;
     margin-top: 2%;
     border-radius: 0px !important;
-    background-color:  darkred !important;
+    background-color:  #96172E !important;
     color: white !important;
     border: none !important;
 }
 .telefono{
-    color: #9b102d;
+    color: #96172E;
 }
 /**************************** FIN PAGINA CONTACTO **********************************************************************/
+
+/****************************  PAGINA NOVEDADES **********************************************************************/
+.wrap_pagina_novedades{
+    margin: 0% 5%;
+}
+.ver_mas{
+    float: right;
+    color: #96172E;
+    font-family: semibold;
+    font-size: 20px;
+}
+/**************************** FIN PAGINA NOVEDADES **********************************************************************/
+
+/**************************** PAGINA NOVEDADES DETALLE**********************************************************************/
+.titulo_novedad_detalle{
+    color: #96172E;
+    font-family: bold;
+}
+.wrap_novedad_titulo_foto1{
+    margin-bottom:  40px;
+}
+.wrap_novedad_foto2, .wrap_novedad_titulo_foto1, .wrap_novedad_contenido2{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+.wrap_novedad_contenido2{
+    padding-right: 30px !important;
+}
+/**************************** FIN PAGINA NOVEDADES DETALLE**********************************************************************/
+
+/****************************  PAGINA POSTVENTA **********************************************************************/
+.wrap_postventa_detalle{
+    margin: 0% 5%;
+}
+/**************************** FIN PAGINA POSTVENTA **********************************************************************/
+
 /**************************** NOVEDADES **********************************************************************/
 .wrap_novedades{
     margin-bottom: 50px;
+    z-index: 1;
 }
 .wrap_novedades .titulo_novedad{
-    color: #9b102d;
+    color: #96172E;
     font-size: x-large;
     font-family: bold;
 }
-
+.mas_novedades{
+    z-index: 0;
+}
 /**************************** FIN NOVEDADES **********************************************************************/
 
 /**************************** BACKEND **********************************************************************/
@@ -643,5 +744,12 @@ input[placeholder]:-ms-placeholder{ color:#000000; font-size:36px;}
     color: white !important;
 }
 /**************************** FIN BACKEND **********************************************************************/
+
+/****************************  MENU ADMIN **********************************************************************/
+.menu_admin a{
+    margin-right: 10px;
+    color: white !important;
+}
+/**************************** FIN MENU ADMIN **********************************************************************/
 
 
